namespace HRMS.Models
{
    public class Item
    {
        public Restaurant? Restaurant { get; set; }
        public int OrderQuantity { get; set; }

    }

    
}
